# RustPlayground

./: .gitignore  Cargo.toml  Directory.Build.props  Directory.Build.targets  RustPlayground.sln  directory.Build.props
CodinGame/: CodinGame.csproj
CodinGame/src/: fences.rs  islands.rs  main.rs
GameWatcherRS/: Cargo.toml
GameWatcherRS/src/: main.rs
RustExport/: Cargo.toml  FPtr.cs  Interop.cs  RustExport.csproj
RustExport/src/: lib.rs
RustExport/tests/: bindings.rs
RustFileEnumerator/src/: main.rs
RustImport/: Program.cs  RegexBenchmark.cs  RustImport.csproj
RustWindowsService/: Cargo.toml  RustWindowsService.csproj
RustWindowsService/src/: device_state_change.rs  event_listener.rs  main.rs  utils.rs  windows_device_query.rs
src/: fences.rs  main.rs
src/GameLauncher/: Program.cs
src/GameWatcher/: GameWatcher.csproj  ProcessExtensions.cs  Program.cs
src/GameWatcherRS/: GameWatcherRS.csproj
src/RustExport/src/: lib.rs
src/RustFileEnumerator/: Cargo.toml
src/RustFileEnumerator/src/: main.rs
src/RustImport/: Program.cs  RegexBenchmark.cs  RustImport.csproj
src/RustWindowsService/: Cargo.toml
src/RustWindowsService/src/: event_listener.rs  main.rs  utils.rs
