[package]
name = "RustWindowsService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-service]
version = "0.6.0"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties"
]